[package]
name = "nng"
version = "0.0.1"

authors = ["FanHui <hui.fan@mail.ru>"]
license = "MIT"
keywords = ["nng", "nanomsg", "nanomsg2"]
readme = "README.md"

repository = "https://github.com/kt10/nng-rs"
homepage = "https://github.com/kt10/nng-rs"
documentation = "https://docs.rs/nng-rs"
description = "Bindings to nng(nanomsg2)."

[dependencies]
libc = "0.2"
nng-sys = { path = "nng-sys", version = "0.0.1" }

[dev-dependencies]
