[package]
name = "nng-sys"
version = "0.0.1"
authors = ["FanHui <hui.fan@mail.ru>"]

links = "nng"
build = "src/build.rs"

license = "MIT"
repository = "https://github.com/kt10/nng-rs"
description = "Native bindings to the nng(nanomsg2) library"

[lib]
name = "nng_sys"
path = "src/lib.rs"

[dependencies]
libc = "0.2"

[build-dependencies]
cmake = "0.1"
